tests/ui/runtime/on-broken-pipe/wrong-flag-arg.rs
//@ compile-flags: -Zon-broken-pipe=wrong
//@ check-fail

fn main() {}

//~? ERROR incorrect value `wrong` for unstable option `on-broken-pipe`
